--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@
 /* Style For the Tags (main elements) */
 body {
     font-family:'Poppins', sans-serif; ;
+    margin:  0;
+}
+section {
+    height: 500px;
 }
 
-
-/* Style For Divs */
 
 
 /* Style For Class */
@@ -22,12 +24,26 @@ color: #FF458E;
     float: left;
     padding-left: 2%;
     margin-left:  4%;
+    margin-top: 2%;
 }
+
 .half-width-01 img{
-    width: 100%;
+    width: 95%;
 }
+.for-bg {
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+    
+    }
+.btn-link {
+
+    text-decoration: none;
+    background-image: linear-gradient(#FF4890,  #eb0d65 );
+    border-radius:  5px;
+    color:  white;
+    padding: 10px 20px;
+    
 
 /* Style For IDs */
-
 
 
